# cppbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: utils.h
src/: main.cpp  utils.cpp
